AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip 1.8

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = . bin conf data flumotion doc m4 pkgconfig

EXTRA_DIST = \
	py-compile-destdir \
	python.mk \
	LICENSE.GPL \
	LICENSE.Flumotion \
	flumotion.spec \
	misc/flu.modules \
	misc/jhbuildrc

clean-local:
	@rm -rf _trial_temp

if HAVE_PYCHECKER
check-local: pychecker
endif

test:
	@make check -C flumotion/test

check-docs:
	@make check -C doc/reference

coverage:
	@trial --coverage coverage -R flumotion.test
	@$(PYTHON) tools/show-coverage.py _trial_temp/coverage/flumotion.*

# we redirect stderr so we don't get messages like
# warning: couldn't find real module for class SSL.Error (module name: SSL)
# which can't be turned off in pychecker

# for some reason, the run is *completely* different if the last set of
# components is moved up.  So keep it low
PYCHECKER_WHITELIST = \
	    flumotion/component/*.py 		\
	    flumotion/admin/*.py		\
	    flumotion/common/*.py		\
	    flumotion/configure/*.py		\
	    flumotion/manager/*.py 		\
	    flumotion/service/*.py		\
	    flumotion/worker/*.py 		\
	    flumotion/twisted/*.py		\
	    flumotion/ui/*.py			\
	    flumotion/utils/*.py		\
	    flumotion/component/*/*.py		\
	    flumotion/component/*/*/*.py

PYCHECKER_BLACKLIST = \
	flumotion/component/consumers/httpstreamer/http.py \
	flumotion/component/converters/overlay/overlay.py \
	flumotion/component/producers/firewire/firewire.py

pychecker:
	@echo running pychecker ...
	@PYTHONPATH=`pwd`			\
	pychecker -Q -F misc/pycheckerrc	\
	$(filter-out $(PYCHECKER_BLACKLIST),$(wildcard $(PYCHECKER_WHITELIST)))\
		2> /dev/null || make pycheckerverbose

pycheckerverbose:
	@echo running pychecker ...
	PYTHONPATH=`pwd`			\
	pychecker -F misc/pycheckerrc		\
	$(filter-out $(PYCHECKER_BLACKLIST),$(wildcard $(PYCHECKER_WHITELIST)))


fixme:
	tools/fixme | less -R

release: dist
	make $(PACKAGE)-$(VERSION).tar.bz2.md5

# generate md5 sum files
%.md5: %
	md5sum $< > $@

.PHONY: test

# generated by make check during make distcheck
DISTCLEANFILES = cache/registry/registry.xml
