# version first -- they are parsed LTR and later options depend on automake 1.8.
AUTOMAKE_OPTIONS = 1.8 dist-bzip2

ACLOCAL_AMFLAGS = -I m4 -I common

include $(srcdir)/common/common.mk
include $(srcdir)/common/pychecker.mk
include $(srcdir)/common/rpm.mk
include $(srcdir)/common/deb.mk

SUBDIRS = . bin conf data flumotion doc common pkgconfig tests po

EXTRA_DIST = \
	env.in \
	RELEASE \
	LICENSE.GPL \
	LICENSE.Flumotion \
	flumotion.spec \
	flumotion.doap \
	misc/pycheckerhelp.py \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

all-local: locale-uninstalled
clean-local: locale-uninstalled-clean

# for some reason, the run is *completely* different if the last set of
# components is moved up.  So keep it low

# same for any gtk stuff - keep it low

PYCHECKER_WHITELIST = \
	    flumotion/extern/log/*.py		\
	    flumotion/admin/text/*.py		\
	    flumotion/component/*.py 		\
	    flumotion/admin/*.py		\
	    flumotion/admin/command/*.py	\
	    flumotion/common/*.py		\
	    flumotion/configure/*.py		\
	    flumotion/job/*.py 			\
	    flumotion/launch/*.py 		\
	    flumotion/manager/*.py 		\
	    flumotion/monitor/*.py 		\
	    flumotion/monitor/*/*.py 		\
	    flumotion/service/*.py		\
	    flumotion/worker/*.py 		\
	    flumotion/worker/checks/*.py 	\
	    flumotion/twisted/*.py		\
	    flumotion/ui/*.py			\
	    flumotion/component/*/*.py		\
	    flumotion/component/*/*/*.py	\
	    flumotion/porter/*.py		\
	    flumotion/wizard/*.py	 	\
	    flumotion/admin/gtk.py

PYCHECKER_BLACKLIST = \
            flumotion/common/gstreamer.py	\
            flumotion/ui/kiwipatches.py		\
            flumotion/ui/linkwidget.py

COVERAGE_MODULES = flumotion

.PHONY: test 

integration:
	trial tests.integration

check-local: check-local-pep8 check-local-registry

# flumotion-trial.in was previously in misc/ so old versions might
# have a stale generated version
CLEANFILES = \
	misc/flumotion-trial

# generated by make check during make distcheck and translation stuff
DISTCLEANFILES = \
	cache/registry/registry.xml \
	po/stamp-it \
	intltool-extract \
	intltool-merge \
	intltool-update

update-externals: update-external-command

update-external-command:
	find flumotion/extern/command -type d -name '.svn' -prune -o -type f -delete
	svn export --force https://thomas.apestaart.org/moap/svn/trunk/moap/extern/command flumotion/extern/command

.PHONY: update-externals update-external-command
