EXTRA_DIST = \
	as-libtool-tags.m4	\
	as-python.m4 		\
	as-version.m4 		\
	as-ac-expand.m4		\
	intltool.m4 		\
	py-compile-destdir 	\
	common.mk 		\
	epydoc.mk 		\
	filterdoc.py 		\
	gendoc.py 		\
	locale.mk 		\
	python.mk 		\
	pychecker.mk		\
	rpm.mk			\
	setup.m4		\
	trial.mk		\
	twisted-module.m4	\
	validate-config.py	\
	validate-registry.py	\
	gen-locale-xml.py
